--- a/index.html
+++ b/index.html
@@ -1,5 +1,146 @@
-<html>
-<body>
-Hello world!
-</body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>Mithril Components</title>
+        <!-- Bootstrap Core CSS -->
+        <link href="css/bootstrap.css" rel="stylesheet">
+        <!-- Custom CSS -->
+        <link href="css/3-col-portfolio.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body data-spy="scroll" data-target=".navbar-scroll" data-offset="0">
+        <div id="navbar-scroll" class="navbar-scroll navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class='col-sm-6 col-xs-8 telephone visible-md visible-lg visible-xs'>
+                    <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#menu" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!-- Navigation -->
+        <nav class="navbar-scroll navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <!-- Logo -->
+                <div class="nav navbar-nav">
+                    <img src="img/Mithril-Components-Logo.png" alt="Mithril-Components">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#menu" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div id="menu" class="col-sm-7 navbar-header navbar2 navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#Getting_Started">Getting Started</a></li>
+                        <li><a href="#Components_1">Components</a></li>
+                        <li><a href="#About_us">About us</a></li>
+                    </ul>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
+        <!-- Page Content -->
+        <div class="center container container_image">
+            <img class="img-responsive mobile-img" src="img/background.jpg" alt="Mithril-Components">
+            <h1>Getting Started</h1>
+            <div><a id="Getting_Started" class="scrollpage"></a></div>
+            <p><span class="center link"><br>Start with installing Boilerplate here</span> and go back to that page to discover the component library!<br><span class="center link">Easy right?</span></p>
+            <h1>Composents Library</h1>
+            <div><a id="Components_1" class="scrollpage"></a></div>
+        </div>
+        <!-- Projects Row -->
+        <!-- Mithril Node Pie Chart -->
+        <div class="container top-space">
+            <div class="col-md-4 category-item">
+                <a href="https://github.com/mithril-components/mithril-node-piechart" target="_blank">
+                    <img class="img-responsive" src="img/pie-chart.jpg" alt="">
+                </a>
+                <h3><a href="https://github.com/mithril-components/mithril-node-piechart" target="_blank">Mithril Node Pie Chart</a></h3>
+                <p>The Best Piechart</p><br>
+                <a href="https://github.com/mithril-components/mithril-node-piechart" target="_blank"><p>
+                <img align="center" src="img/github.png"><br></p>
+                <p><button class="center" href="https://github.com/mithril-components/mithril-node-piechart" target="_blank" >View it on Github</button></p></a>
+            </div>
+            <!-- Mithril Node Harviewer -->
+            <div class="col-md-4 category-item">
+                <a href="https://github.com/mithril-components/mithril-node-harviewer">
+                    <img class="img-responsive" src="img/harviewer.jpg" alt="Mithril Node Harviewer">
+                </a>
+                <a href="https://github.com/mithril-components/mithril-node-harviewer" target="_blank"><h3>Mithril Node Harviewer</a></h3>
+                <p>HAR viewer for<br>Mithril - NodeJS</p>
+                <a href="https://github.com/mithril-components/mithril-node-harviewer" target="_blank"><p>
+                <img align="center" src="img/github.png"><br></p>
+                <p><button class="center" href="https://github.com/mithril-components/mithril-node-harviewer" target="_blank" >View it on Github</button></p></a>
+            </div>
+            <!-- Mithril Node Linechart -->
+            <div class="col-md-4 category-item">
+                <a href="https://github.com/mithril-components/mithril-node-linechart" target="_blank">
+                    <img class="img-responsive" src="img/linechart.jpg" alt="">
+                </a>
+                <h3>
+                <a href="https://github.com/mithril-components/mithril-node-linechart" target="_blank">Mithril Node Linechart</a>
+                </h3>
+                <p>Simple Line chart component for<br>Mithril-NodeJS using SVG.</p>
+                <a href="https://github.com/mithril-components/mithril-node-linechart" target="_blank"><p>
+                <img align="center" src="img/github.png"><br></p>
+                <p><button class="center" href="https://github.com/mithril-components/mithril-node-linechart" target="_blank" >View it on Github</button></p></a>
+            </div>
+            <div class="row">
+                <!-- Mithril Node Pagination -->
+                <div class="col-md-4 category-item">
+                    <a href="https://github.com/mithril-components/mithril-node-pagination" target="_blank">
+                        <img class="img-responsive" src="img/pagination.jpg" alt="">
+                    </a>
+                    <h3>
+                    <a href="https://github.com/mithril-components/mithril-node-pagination" target="_blank">Mithril Node Pagination</a>
+                    </h3>
+                    <p>Pagination render<br>Mithril-NodeJS</p>
+                    <a href="https://github.com/mithril-components/mithril-node-paginatio" target="_blank"><p>
+                    <img align="center" src="img/github.png"><br></p>
+                    <p><button class="center" href="https://github.com/mithril-components/mithril-node-paginatio" target="_blank" >View it on Github</button></p></a>
+                </div>
+                <div class="col-md-12 container">
+                    <img class="img-width" src="img/team.png">
+                    <div><a id="About_us" class="scrollpage"></a></div>
+                </div>
+            </div>
+            
+        </div>
+        <!-- End Row -->
+        <!-- About Us -->
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12 center footer-custom">
+                    Come back soon for new updates!<br>
+                    Copyright &copy; Mithril Component 2016 sponsored by WPIC
+                </div>
+            </div>
+        </footer>
+        
+        <!-- /.container -->
+        <!-- jQuery -->
+        <script src="js/jquery.js"></script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
+    </body>
 </html>
