Space top needed for Banner
Space top needed for Banner : sliders-space

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </nav>
         <!-- Page Content -->
         <div class="center container container_image">
-            <img class="img-responsive mobile-img" src="img/background.jpg" alt="Mithril-Components">
+            <img class="img-responsive mobile-img sliders-space" src="img/background.jpg" alt="Mithril-Components">
             <h1>Getting Started</h1>
             <div><a id="Getting_Started" class="scrollpage"></a></div>
             <p><span class="center link"><br>Start with installing Boilerplate here</span> and go back to that page to discover the component library!<br><span class="center link">Easy right?</span></p>
