--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1>Getting Started</h1>
             <div><a id="Getting_Started" class="scrollpage"></a></div>
             <p><span class="center link"><br>Start with installing Boilerplate here</span> and go back to that page to discover the component library!<br><span class="center link">Easy right?</span></p>
-            <h1>Composents Library</h1>
+            <h1>Components Library</h1>
             <div><a id="Components_1" class="scrollpage"></a></div>
         </div>
         <!-- Projects Row -->
